--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1>MINHA MEDIA KIT</h1>
   </header>
         <img src="influencer media kit.jpg" alt="Descrição da imagem">
+  <section>
+    <footer>
+  <p>INFORMAÇÕES ADICIONAIS</p></p>
+</footer>
+
+  </section>
   <footer>
     <p>&copy; 2023 Meu Site. Todos os direitos reservados.</p>
   </footer>
