--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
         <img src="influencer media kit.jpg" alt="Descrição da imagem">
   <section>
     <footer>
-  <p>INFORMAÇÕES ADICIONAIS</p></p>
+
+  <div class="social-media">
+    <a href="https://www.facebook.com/seuusuario" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.twitter.com/seuusuario" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/seuusuario" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+  </div>
+  <div class="contact-info">
+    <p>Email: contato@exemplo.com</p>
+    <p>Telefone: (XX) XXXX-XXXX</p>
+  </div>
 </footer>
+
 
   </section>
   <footer>
