--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meu Site</title>
+  <titl>MIDIA KIT</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
   <script src="script.js"></script>
 </head>
 <body>
   <header>
-    <h1>MINHA MEDIA KIT</h1>
+    <h1>MINHA MIDIA KIT</h1>
   </header>
         <img src="influencer media kit.jpg" alt="Descrição da imagem">
   <section>
