--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <titl>MIDIA KIT</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="https://fontawesome.com/">
   <script src="script.js"></script>
 </head>
 <body>
