--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
   </header>
         <img src="influencer media kit.jpg" alt="Descrição da imagem">
   <section>
+    
     <footer>
-
-  <div class="social-media">
-    <a href="https://www.facebook.com/seuusuario" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-    <a href="https://www.twitter.com/seuusuario" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-    <a href="https://www.instagram.com/seuusuario" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+  <div class="container">
+    <div class="rectangle"></div>
+    <div class="circle"></div>
+    <div class="rectangle"></div>
+    <div class="circle"></div>
   </div>
+
   <div class="contact-info">
     <p>Email: contato@exemplo.com</p>
     <p>Telefone: (XX) XXXX-XXXX</p>
