--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     .container ul li a {
-      display: block;
+      display: flex;
       padding: 10px;
       background-color: #e42fad;
       color: #0e0606;
@@ -53,7 +53,7 @@
     }
 
     .emojis {
-      text-align: center;
+      text-align: flex;
       font-size: 50px;
     }
     body {
