--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     .container {
-      max-width: 400px;
+      max-width: 500px;
       margin: 0 auto;
       background-color: #f7a7a7;
       padding: 20px;
@@ -54,7 +54,8 @@
 
     .emojis {
       text-align: flex;
-      font-size: 50px;
+      font-size: 40px;
+      margin-left: auto;
     }
     body {
       font-family: Arial, sans-serif;
